--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 
     <ol id="lista-tarefas">
     </ol>
-
     <button id="criar-tarefa">Adicionar Tarefa</button>
-
+    <button id="apaga-tudo">Limpar</button>
+    <button id="remover-finalizados">Remover Finalizados</button>
+    <button id="salvar-tarefas">Salvar Tarefas</button>
+    
     <script src="script.js"></script>    
 </body>
 </html>
