--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <button id="apaga-tudo">Limpar</button>
     <button id="remover-finalizados">Remover Finalizados</button>
     <button id="salvar-tarefas">Salvar Tarefas</button>
-    
+    <button id="remover-selecionado">Remover Tarefa Selecionada</button>
+
     <script src="script.js"></script>    
 </body>
 </html>
